Adicionado título na index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" type="style/css" href="estilo.css">
+        <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
     <body>
+        <h1>Bem vindo!</h1>
     </body>
 </html>
