--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" type="style/css" href="estilo.css">
+        <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
     <body>
+        <div class="texto">asdasd asdasd asdasd</div>
     </body>
 </html>
